Fixed the Alignment of the David Container
Positioned items in the david container to center. Added <!-- end david
container --> comment

--- a/app/app-global-css/david.css
+++ b/app/app-global-css/david.css
@@ -126,3 +126,7 @@
   100% { transform: translateX(15px);  
    }
 }
+
+.david-container{
+  margin-top: 50px;
+}
